# esp32_microphone_router

./: .gitignore  Cargo.toml  README.md  build.rs  sdkconfig.defaults
.cargo/: config.toml
scripts/: upload.sh
src/: button.rs  config.rs  esp_now.rs  lib.rs  models.rs  power.rs
src/models/: esp_now_message.rs  message.rs  microphone.rs  receiver.rs  routable_microphone_sender.rs  sender.rs
src/models/sender/: microphone_sender.rs  routable_microphone_sender.rs  simple_microphone_sender.rs
